v2.0.5
Able to parse old log format without model
Added version information to vcontrol-cli 

v2.0.6
More sanity check on import data

v2.0.7
More robust vbar control detection on windows.

v2.2.0
Added Graph