@@ -1,6 +1,6 @@
 # vcontrol-log-analyzer
 Log analyzer for VBar control
 
-Vcontrol is a program to analyze logs from Mikado VBar Control
+Vcontrol is a multiplatform program to analyze logs from Mikado VBar Control
 
-There are two programs, cli and gui
+More info at: http://www.helifreak.com/showthread.php?t=695242
